# nixos-configuration

./: .ghci  .gitconfig  .gitglobalignore  .gitignore  .gtkrc-2.0  .gvimrc  .mongorc.js  .profile  .pythonrc  .vimrc  .zshrc  configuration.nix  flake.nix  lib.nix
.cabal/: config
.config/: starship.toml
.config/albert/: albert.conf
.config/gtk-3.0/: settings.ini
.config/nixpkgs/: config.nix
.config/nixpkgs/nixos/: configuration.nix
.config/nixpkgs/overlays/: dunst.nix  emacs-custom.nix  fix-taffybar.nix  profile.nix  signal-desktop-appindicator.nix  signal-desktop.nix.package  slack-appindicator.nix  taffybar-2-fix.nix  udiskie-appindicator.nix  udiskie.nix.package  updatedHaskellSrcTools.nix  xmonad-14.nix
.config/nixpkgs/overlays/xmonad/haskell-package/: LICENSE  gen-nix  shell.nix  xmonad-custom.cabal  xmonad-custom.nix
.config/nixpkgs/overlays/xmonad/haskell-package/src/: Main.hs  Taffybar.hs  Xmonad.hs
.config/powerline/: colors.json
.config/taffybar/: taffybar.css  taffybar.hs  taffybar.rc
.config/termite/: config
.emacs.d/: init.el
.nixpkgs/: chatty.nix  config.nix  haskellEnvWithHoogle.nix  powerline-gitstatus.nix  type-natural-0.7.1.2.nix
.nixpkgs/boo/: .gitattributes  default.nix
.nixpkgs/nda/: default.nix  nda.py
.nixpkgs/nixos/: alyamar.nix  configuration.nix  reflex-frp.nix  vanwa.nix
.nixpkgs/type-nat-solver/: default.nix
.nixpkgs/vim/: default.nix  plugins.nix  vimrc
.nixpkgs/xmonad-custom/: default.nix  gen-nix  xmonad-custom.cabal
.nixpkgs/xmonad-custom/src/: Main.hs
.nixpkgs/zsh/: default.nix  zshConfig.nix  zshrc
.ssh/: config
.xmonad/: startup-hook  xmonad.hs
.zsh/functions/: set-ghc
lib/: commands.nix  default.nix  local.nix
overrides/fix-taffybar/: overlay.nix
overrides/signal-tray-icon/: overlay.nix
overrides/taffybar-ghc-9/: overlay.nix
overrides/taffybar-strut-hidpi/: overlay.nix
overrides/tutanota/: default.nix  overlay.nix
system/machines/kocka/: default.nix  hardware-configuration.nix
system/machines/sima/: default.nix  disk.nix  hardware-configuration.nix
system/modules/: bluetooth.nix  cachix.nix  common.nix  haskell-nix.nix  hidpi.nix  keyboard-rgb.nix  pipewire.nix  reflex-frp.nix  regreet.nix  sane-extra-config.nix  serve-nix-store.nix  systemd-boot.nix  touchpad.nix  webcam-server.nix
system/modules/cachix/: fossar.nix
system/modules/disk/: default.nix
system/modules/encrypted-disk/: default.nix
system/modules/localtimed/: default.nix
system/modules/river/: default.nix  waylock.nix
users/cumber/: default.nix
users/cumber/config/: ssh.config
users/cumber/git/: cellfield.nix  default.nix  grantshub.nix  make-github-remote-rules.nix  personal.nix
users/modules/: file-manager.nix  git.nix
users/modules/alacritty/: default.nix
users/modules/angband/: default.nix
users/modules/backups/: default.nix
users/modules/browser/: default.nix
users/modules/copyq/: default.nix
users/modules/dunst/: default.nix
users/modules/element/: default.nix
users/modules/emacs/: default.nix  init.el
users/modules/git/: default.nix
(+95 files in other folders)
