name: xmonad-custom
version: 0.0.0.0
synopsis: My XMonad build
license: BSD3
license-file: LICENSE
author: Benjamin Mellor
maintainer: ben@smokingkangaroo.com
copyright: Benjamin Mellor 2017
build-type: Simple
cabal-version: >=1.10

executable xmonad-custom
  main-is: Main.hs
  -- other-modules:
  build-depends: base == 4.9.*
               , taffybar == 0.4.*
               , unix == 2.7.*
               , xmonad == 0.13.*
               , xmonad-contrib == 0.13.*
               , X11 == 1.8.*
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors
