name: xmonad-custom
version: 0.0.0.0
synopsis: My XMonad build
license: BSD3
license-file: LICENSE
author: Benjamin Mellor
maintainer: ben@smokingkangaroo.com
copyright: Benjamin Mellor 2017
build-type: Simple
cabal-version: >=1.10

executable launch-xmonad
  main-is: Xmonad.hs
  -- other-modules:
  build-depends: base == 4.11.*
               , filepath == 1.4.*
               , directory == 1.3.*
               , process == 1.6.*
               , taffybar == 3.0.*
               , unix == 2.7.*
               , xmonad == 0.14.*
               , xmonad-contrib == 0.14.*
               , X11 == 1.9.*
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors

executable launch-taffybar
  main-is: Taffybar.hs
  -- other-modules:
  build-depends: base == 4.11.*
               , taffybar == 3.0.*
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors
               -threaded